# docker-pyenv-tox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile_alpine  Dockerfile_debian  Dockerfile_toxexample  Dockerfile_ubuntu  README.md  create_builds.py  create_manifests.py  docker-entrypoint-tox.sh  pyproject.toml  tox.ini
.github/workflows/: build.yml
pyenv_resolve/: Cargo.toml
pyenv_resolve/src/: main.rs
src/toxtest/: __init__.py
tests/: test_toxtest.py
