[tool.poetry]
name = "toxtest"
version = "0.2.0"
description = "Tox needs a python project"
authors = ["Eero af Heurlin <eero.afheurlin@advian.fi>", "Joni Kähärä <joni.kahara@advian.fi>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
coverage = { version = "^6.3", extras = ["toml"] }
pytest-cov = "^3.0"
pylint = "^2.12"
black = "^22.1"
bandit = "^1.7"
mypy = "^0.941"
pre-commit = "^2.17"
pytest-asyncio = "^0.18"
bump2version = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
