[tool.poetry]
name = "toxtest"
version = "0.2.0"
description = "Tox needs a python project"
authors = ["Eero af Heurlin <eero.afheurlin@advian.fi>", "Joni Kähärä <joni.kahara@advian.fi>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
coverage = "^7.4"
pytest-cov = "^4.1"
pylint = "^3.0"
black = "^24.1"
bandit = "^1.7"
mypy = "^1.8"
pre-commit = "^3.6"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.4"
types-toml = ">=0.10,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
